<resources>
    <string name="app_name">Mootster</string>
    <string name="versionName">1.0</string>
    <string name="versionCode">1</string>
    <string name="loginLabel">Mootster Login and Registration</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_fname">First name</string>
    <string name="hint_lname">Last name</string>
    <string name="hint_contact">Contact</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_college">College</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu User Items -->
    <string-array name="nav_user_drawer_items">
        <item >Home</item>
        <item >People</item>
        <item >Connections</item>
        <item >Logout</item>
    </string-array>

    <!-- Nav Drawer Menu Admin Items -->
    <string-array name="nav_admin_drawer_items">
        <item >Create Moot</item>
        <item >Admin Dash</item>
        <item >Connections</item>
        <item >Edit Profile</item>
        <item >Logout</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_user_drawer_icons">
        <item>@mipmap/ic_home</item>
        <item>@mipmap/ic_people</item>
        <item>@mipmap/ic_communities</item>
        <item>@mipmap/ic_logout</item>
    </array>

    <array name="nav_admin_drawer_icons">
        <item>@mipmap/ic_home</item>
        <item>@mipmap/ic_people</item>
        <item>@mipmap/ic_communities</item>
        <item>@mipmap/ic_profile</item>
        <item>@mipmap/ic_logout</item>
    </array>

    <!-- List Item for the Spinner in Create Moot Fragment -->
    <string-array name="moot_type_dropdown_list">
        <item>Internal</item>
        <item>External</item>
    </string-array>

    <!-- List Item for the MultiAutoComplete in Create Moot Fragment -->
    <string-array name="body_tag_list">
        <item>Criminal</item>
        <item>Constitutional</item>
        <item>Contract</item>
        <item>Labour</item>
        <item>Company</item>
        <item>Tort</item>
        <item>Property</item>
        <item>Tax</item>
        <item>Trust</item>
        <item>Family</item>
    </string-array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_role">Select Role</string>

    <string name="hello_world">Hello world!</string>
    <string name="mca_admin">MCA Admin</string>
    <string name="student">Student</string>
    <string name="title_activity_register_admin">MCA Admin Registration</string>
    <string name="hint_select_dob">Select Date of Birth</string>
    <string name="hint_fac_incharge">Faculty In-charge</string>
    <string name="hint_fac_contact">Faculty Contact</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>

    <string name="hint_moot_date">Date of Moot</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_moot_reg_date">Date of Registration</string>
    <string name="mootPageTitle">New Moot Page</string>
    <string name="hint_moot_court_name">Name of Moot Court</string>
    <string name="hint_body_of_law">Add Tags for Body of Law</string>
    <string name="create_moot">Create Moot</string>
    <string name="upload_rules"><![CDATA[Upload Rules & Regulations]]></string>
    <string name="upload_moot_pblm">Upload Moot Problem</string>

    <!-- Fragment Name -->
    <string name="fragment_connections">Connections</string>
    <string name="title_fragment_admin_dash">List of Moots</string>
</resources>
