<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mootster_green_material_500"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.ha294221.mootster.RegisterAdminActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="20dp"
    android:isScrollContainer="true"
    >


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_fname"
        android:id="@+id/fnameAdmin"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/lnameAdmin"
        android:layout_below="@+id/fnameAdmin"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@color/white"
        android:hint="@string/hint_lname" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:id="@+id/contactAdmin"
        android:layout_below="@+id/lnameAdmin"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@color/white"
        android:hint="@string/hint_contact"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dobAdmin"
        android:inputType="none"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_below="@+id/contactAdmin"
        android:background="@color/white"
        android:hint="@string/hint_dob"
       />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calendarDob"
        android:src="@mipmap/ic_calendar"
        android:background="@android:color/transparent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/dobAdmin"
        android:layout_alignBottom="@+id/dobAdmin"
        android:contentDescription="@string/hint_select_dob"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/collegeAdmin"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_below="@+id/dobAdmin"
        android:background="@color/white"
        android:hint="@string/hint_college"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/facultyIncharge"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_below="@+id/collegeAdmin"
        android:background="@color/white"
        android:hint="@string/hint_fac_incharge"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:id="@+id/facultyContact"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_below="@+id/facultyIncharge"
        android:background="@color/white"
        android:hint="@string/hint_fac_contact"
       />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/emailAdmin"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_below="@+id/facultyContact"
        android:background="@color/white"
        android:hint="@string/hint_email"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/passwordAdmin"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_below="@+id/emailAdmin"
        android:background="@color/white"
        android:hint="@string/hint_password"
        />

    <Button
        android:id="@+id/btnRegisterAdmin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#ea4c88"
        android:text="@string/btn_register"
        android:textColor="@android:color/black"
        android:layout_below="@+id/passwordAdmin" />

    <Button
        android:id="@+id/btnRegisterAdminToLoginScreen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:layout_below="@+id/btnRegisterAdmin"/>


</RelativeLayout>
</ScrollView>