<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?actionBarSize"
    >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <LinearLayout
        android:id="@+id/viewA"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:background="@color/color_primary"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewB"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:orientation="vertical"
        android:padding="20dp">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_fname"
                android:id="@+id/edit_fname"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_lname"
                android:id="@+id/edit_lname"
                android:layout_marginTop="10dp"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_dob"
                android:id="@+id/edit_dob"
                android:layout_below="@+id/edit_lname"
                android:layout_marginTop="10dp"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_contact"
                android:id="@+id/edit_contact"
                android:layout_below="@+id/edit_dob"
                android:layout_marginTop="10dp"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_college"
                android:id="@+id/edit_college"
                android:layout_below="@+id/edit_contact"
                android:layout_marginTop="10dp"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:id="@+id/edit_email"
                android:layout_below="@+id/edit_college"
                android:layout_marginTop="10dp"/>
    </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAddImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@mipmap/ic_add_image"
        app:layout_anchor="@id/viewA"
        app:layout_anchorGravity="bottom|right|end"/>
</android.support.design.widget.CoordinatorLayout>
